@@ -1,3 +1,7 @@
+2023-08-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/ttfdump.test: Make easier to test on Windows.
+
 2021-02-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* src/ttfdump.c, configure.ac:
